@@ -1,6 +1,7 @@
 === 3.7.0 (unreleased) ===
 
 * Introduced Django 2.2 support.
+* Fixed test suite.
 
 
 === 3.6.0 (2019-01-29) ===
